refactor: added most borrowed and overdue users calculation