@@ -1,14 +1,22 @@
 package com.efekansalman.Library.service.impl;
 
+import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import com.efekansalman.Library.Entity.Admin;
+import com.efekansalman.Library.Entity.Lending;
 import com.efekansalman.Library.Entity.Report;
 import com.efekansalman.Library.Entity.ReportType;
+import com.efekansalman.Library.exception.InvalidRequestException;
+import com.efekansalman.Library.exception.ResourceNotFoundException;
 import com.efekansalman.Library.repository.AdminRepository;
 import com.efekansalman.Library.repository.LendingRepository;
 import com.efekansalman.Library.repository.ReportRepository;
@@ -17,20 +25,20 @@ import com.efekansalman.Library.service.ReportService;
 @Service
 public class ReportServiceImpl implements ReportService {
 
-	@Autowired
-	private ReportRepository reportRepository;
-	
-	@Autowired
-	private AdminRepository adminRepository;
-	
-	@Autowired
-	private LendingRepository lendingRepository;
-	
+    @Autowired
+    private ReportRepository reportRepository;
+
+    @Autowired
+    private AdminRepository adminRepository;
+
+    @Autowired
+    private LendingRepository lendingRepository;
+
     @Override
     public Report generateReport(Long adminId, ReportType type) {
         // Find the admin
         Admin admin = adminRepository.findById(adminId)
-            .orElseThrow(() -> new RuntimeException("Admin not found with ID: " + adminId));
+            .orElseThrow(() -> new ResourceNotFoundException("Admin not found with ID: " + adminId));
 
         // Create a new report
         Report report = new Report();
@@ -42,18 +50,38 @@ public class ReportServiceImpl implements ReportService {
         String content;
         switch (type) {
             case MOST_BORROWED:
-                content = "Report for most borrowed books (placeholder)";
-                // TODO: Logic to fetch most borrowed books
+                // Fetch all lendings and group by book, then sort by frequency
+                List<Lending> allLendings = lendingRepository.findAll();
+                Map<String, Long> bookBorrowCount = allLendings.stream()
+                    .collect(Collectors.groupingBy(
+                        lending -> lending.getBook().getTitle(),
+                        Collectors.counting()
+                    ));
+                List<String> mostBorrowedBooks = bookBorrowCount.entrySet().stream()
+                    .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
+                    .limit(5) // Top 5 most borrowed books
+                    .map(entry -> entry.getKey() + ": " + entry.getValue() + " times")
+                    .collect(Collectors.toList());
+                content = "Most borrowed books:\n" + String.join("\n", mostBorrowedBooks);
                 break;
+
             case OVERDUE_USERS:
-                List<String> overdueUsers = lendingRepository.findByReturnDateIsNullAndDueDateBefore(new Date())
-                    .stream()
-                    .map(lending -> lending.getCustomer().getUsername())
-                    .toList();
-                content = "Overdue users: " + String.join(", ", overdueUsers);
+                // Fetch overdue lendings with pagination and detailed info
+                Pageable pageable = PageRequest.of(0, 10); // First 10 overdue users
+                List<Lending> overdueLendings = lendingRepository.findByReturnDateIsNullAndDueDateBefore(new Date(), pageable);
+                List<String> overdueDetails = overdueLendings.stream()
+                    .map(lending -> String.format(
+                        "%s (Book: %s, Due: %s)",
+                        lending.getCustomer().getUsername(),
+                        lending.getBook().getTitle(),
+                        lending.getDueDate().toString()
+                    ))
+                    .collect(Collectors.toList());
+                content = "Overdue users:\n" + String.join("\n", overdueDetails);
                 break;
+
             default:
-                content = "Unknown report type";
+                throw new InvalidRequestException("Unsupported report type: " + type);
         }
         report.setContent(content);
 
@@ -61,19 +89,25 @@ public class ReportServiceImpl implements ReportService {
         return reportRepository.save(report);
     }
 
-	@Override
-	public List<Report> findReportsByAdmin(Long adminId) {
+    @Override
+    public List<Report> findReportsByAdmin(Long adminId) {
         // Find the admin
         Admin admin = adminRepository.findById(adminId)
-            .orElseThrow(() -> new RuntimeException("Admin not found with ID: " + adminId));
-        // Return all reports by the admin
-        return reportRepository.findByAdmin(admin);
-	}
+            .orElseThrow(() -> new ResourceNotFoundException("Admin not found with ID: " + adminId));
+        // Return all reports by the admin, sorted by generatedDate (descending)
+        List<Report> reports = reportRepository.findByAdmin(admin);
+        reports.sort(Comparator.comparing(Report::getGeneratedDate).reversed());
+        return reports;
+    }
 
-	@Override
-	public List<Report> findReportsByType(ReportType type) {
-        // Return all reports of the specified type
-        return reportRepository.findByType(type);
-	}
-
+    @Override
+    public List<Report> findReportsByType(ReportType type) {
+        // Validate ReportType input
+        if (type == null) {
+            throw new InvalidRequestException("Report type cannot be null");
+        }
+        // Return all reports of the specified type with pagination
+        Pageable pageable = PageRequest.of(0, 50); // First 50 reports
+        return reportRepository.findByType(type, pageable);
+    }
 }
